examples/sample-product-chart/chart-test/reports/scenario-networking-traefik-ingress-20260602-121328/artifacts/manifests/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-02T16:14:00Z"
    generation: 1
    labels:
      app: sample
      app.kubernetes.io/component: skywatcher
      app.kubernetes.io/instance: sample
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: sample-product
      app.kubernetes.io/version: 1.0.0
      helm.sh/chart: sample-product-0.1.0
    name: sample
    namespace: sample
    resourceVersion: "573"
    uid: 4a681157-a181-4891-9046-04c68eacb95f
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: sample
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: sample
          app.kubernetes.io/component: skywatcher
          app.kubernetes.io/instance: sample
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/name: sample-product
          app.kubernetes.io/version: 1.0.0
          helm.sh/chart: sample-product-0.1.0
      spec:
        containers:
        - image: public.ecr.aws/nginx/nginx:1.27-alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: app
          ports:
          - containerPort: 80
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-06-02T16:14:03Z"
      lastUpdateTime: "2026-06-02T16:14:03Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-06-02T16:14:00Z"
      lastUpdateTime: "2026-06-02T16:14:03Z"
      message: ReplicaSet "sample-69469cb4c6" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
